--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -1,38 +1,39 @@
 name: healthkit-backend
+region: sgp
 services:
   - name: api
-    github:
-      branch: main
-      deploy_on_push: true
-      repo: your-username/HealthKit_Backend
+    git:
+      branch: master
+      repo_clone_url: https://github.com/moovingsloth/healthkit_backend
     build_command: pip install -r requirements.txt
-    run_command: uvicorn app.main:app --host 0.0.0.0 --port $PORT
-    http_port: 8000
+    environment_slug: python
+    instance_size_slug: basic-xs
     instance_count: 1
-    instance_size_slug: basic-xxs
+    routes:
+      - path: /
     envs:
       - key: MONGODB_URL
-        scope: RUN_AND_BUILD_TIME
-        value: ${mongodb.MONGODB_URL}
+        scope: RUN_TIME
+        value: ${healthkit-mongodb.DATABASE_URL}
       - key: REDIS_URL
-        scope: RUN_AND_BUILD_TIME
-        value: ${redis.REDIS_URL}
-      - key: GOOGLE_SHEETS_CREDENTIALS
-        scope: RUN_AND_BUILD_TIME
-        value: ${GOOGLE_SHEETS_CREDENTIALS}
+        scope: RUN_TIME
+        value: ${healthkit-redis.DATABASE_URL}
+      - key: MODEL_PATH
+        scope: RUN_TIME
+        value: model/concentration_model.pkl
       - key: GOOGLE_SHEETS_ID
-        scope: RUN_AND_BUILD_TIME
-        value: ${GOOGLE_SHEETS_ID}
+        scope: RUN_TIME
+        value: ""
 
 databases:
   - engine: MONGODB
-    name: mongodb
+    name: healthkit-mongodb
     production: false
     cluster_name: healthkit-mongodb
     db_name: healthkit
     db_user: healthkit_user
 
   - engine: REDIS
-    name: redis
+    name: healthkit-redis
     production: false
-    cluster_name: healthkit-redis 
+    cluster_name: healthkit-redis
