--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,37 +10,34 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+        uses: docker/setup-buildx-action@v2
 
       - name: Login to Digital Ocean Container Registry
-        uses: docker/login-action@v1
+        uses: docker/login-action@v2
         with:
           registry: registry.digitalocean.com
           username: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
           password: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
 
       - name: Build and push Docker image
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          tags: registry.digitalocean.com/your-registry/healthkit-backend:latest
+          tags: registry.digitalocean.com/healthkit/backend:latest
+          cache-from: type=registry,ref=registry.digitalocean.com/healthkit/backend:latest
+          cache-to: type=inline
+          build-args: |
+            BUILD_DATE=$(date -u +'%Y-%m-%dT%H:%M:%SZ')
+            VCS_REF=${{ github.sha }}
 
-      - name: Deploy to Digital Ocean App Platform
-        uses: digitalocean/app_action@v1
+      - name: Install doctl
+        uses: digitalocean/action-doctl@v2
         with:
-          app_name: healthkit-backend
           token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
-          images: |
-            [
-              {
-                "name": "healthkit-backend",
-                "registry_type": "DOCR",
-                "registry": "registry.digitalocean.com",
-                "repository": "your-registry/healthkit-backend",
-                "tag": "latest"
-              }
-            ] 
+
+      - name: Update deployment
+        run: doctl apps update ${{ secrets.DIGITALOCEAN_APP_ID }} --spec .do/app.yaml
