--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ fastapi==0.110.0
 uvicorn[standard]==0.27.1
 websockets==12.0
 motor==3.3.2
+pymongo==4.6.1
 redis==5.0.1
 pandas>=1.3.0
 numpy>=1.20.0
@@ -15,3 +16,4 @@ python-multipart==0.0.9
 gunicorn==21.2.0
 lightgbm>=3.3.0
 pytest>=7.0.0
+requests>=2.31.0
